force-app/main/default/objects/Provider_Profile__c/Provider_Profile__c.object-meta.xml
<CustomObject>
    <description>A helper (Provider) who offers care. Scored by MatchProviders against a Care Need.</description>
    <label>Provider Profile</label>
    <nameField>
        <label>Provider Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>