force-app/main/default/objects/Provider_Profile__c/fields/Active_Match_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Match_Count__c</fullName>
    <label>Active Match Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
    <description>Count of in-flight Matches, compared to Capacity__c. Maintained by app logic.</description>
</CustomField>