force-app/main/default/objects/Provider_Profile__c/fields/Availability_Time_Block__c.field-meta.xml
<CustomField>
    <fullName>Availability_Time_Block__c</fullName>
    <label>Availability Time Block</label>
    <type>MultiselectPicklist</type>
    <description>Overlap with Requested_Time_Block__c.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Morning</fullName><default>false</default><label>Morning</label></value>
            <value><fullName>Afternoon</fullName><default>false</default><label>Afternoon</label></value>
            <value><fullName>Evening</fullName><default>false</default><label>Evening</label></value>
            <value><fullName>Overnight</fullName><default>false</default><label>Overnight</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>