force-app/main/default/objects/Provider_Profile__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <label>Capacity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Active concurrent matches allowed. Null treated as 1 by the matcher.</description>
</CustomField>