force-app/main/default/objects/Provider_Profile__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
    <description>Location match. Free text (locale-neutral).</description>
</CustomField>