force-app/main/default/objects/Provider_Profile__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Provider Profiles</relationshipLabel>
    <relationshipName>Provider_Profiles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The person offering care.</description>
</CustomField>