force-app/main/default/objects/Provider_Profile__c/fields/Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Geolocation__c</fullName>
    <label>Geolocation</label>
    <type>Location</type>
    <scale>7</scale>
    <description>Lat/Long; distance calc vs. need.</description>
</CustomField>