force-app/main/default/objects/Provider_Profile__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
    <description>0.0-5.0; tiebreaker only.</description>
</CustomField>