force-app/main/default/objects/Provider_Profile__c/fields/Service_Radius_Km__c.field-meta.xml
<CustomField>
    <fullName>Service_Radius_Km__c</fullName>
    <label>Service Radius (Km)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
    <defaultValue>10</defaultValue>
    <description>Max distance provider will travel.</description>
</CustomField>