force-app/main/default/objects/Provider_Profile__c/fields/Services_Offered__c.field-meta.xml
<CustomField>
    <fullName>Services_Offered__c</fullName>
    <label>Services Offered</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <description>Matched against Care_Type__c (service-type gate).</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Eldercare</fullName><default>false</default><label>Eldercare</label></value>
            <value><fullName>Childcare</fullName><default>false</default><label>Childcare</label></value>
            <value><fullName>Respite</fullName><default>false</default><label>Respite</label></value>
            <value><fullName>Transport</fullName><default>false</default><label>Transport</label></value>
            <value><fullName>Meals</fullName><default>false</default><label>Meals</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>