force-app/main/default/objects/Provider_Profile__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <label>Verified</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Trust/safety gate; unverified providers never surface. Shown to seekers.</description>
</CustomField>